# MyGPT2

./: .gitignore  MyGPT2 Stats.xlsx  README.md  pyproject.toml  ~$MyGPT2 Stats.xlsx
bookgpt/: __init__.py
bookgpt/crawl/: arxiv.py  gutenberg.py  openstax.py  pdf_extract.py
bookgpt/model/: compare.py  dpo.py  finetune.py  generate.py  gpt2.py  preference_gen.py  pretrain.py  scoring.py
bookgpt/orchestrator/: orchestrator.py
bookgpt/router/: router.py
bookgpt/tokenizer/: train_bpe.py
bookgpt/utils/: device.py  paths.py
configs/: default.yaml
docs/: architecture_experiments.md  commands.md
plots/diagnostics/: a_course_of_pure_mathematics_report.json  an_elementary_course_in_synthetic_projective_geometry_report.json  an_introduction_to_mathematics_report.json  an_introduction_to_nonassociative_algebras_report.json  arxiv_1010_4298v7_report.json  arxiv_1607_06196v2_report.json  arxiv_1805_06560v1_report.json  arxiv_1806_00596v1_report.json  arxiv_1806_09142v2_report.json  arxiv_1902_03269v2_report.json  arxiv_2011_05848v1_report.json  arxiv_2012_09280v1_report.json  arxiv_2110_14321v1_report.json  calculus_made_easy_report.json  elementary_illustrations_of_the_differential_and_integral_calculus_report.json  plane_geometry_report.json  (+20 more)
scripts/: chat.py  clean_all_books.py  crawl_books.py  diagnose_all_books.py  diagnose_model.py  export_onnx.py  finetune_model.py  generate_qa.py  migrate_to_versioned.py  pretrain_model.py  run_dpo.py  run_dpo_top5.py  test_external_tokenizer.py  tokenize_text.py  train_router.py  train_tokenizer.py  visualize_training.py
(+107 files in other folders)
